# immo_app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  allocators.py  app.py  config.py  debug_cf.py  docker-compose.yml  financial_calculations.py  health_check.py  legacy_allocators.py  legacy_calculations.py  legacy_strategy_finder.py  pyproject.toml  requirements.txt  strategy_finder.py  utils.py  validation.py
.github/workflows/: ci.yml
data/: archetypes_recale_2025_v2.json
docs/: Analysis prompt.md  Audit_Report_Roadmap.md  PARAMETER_VERIFICATION.md  QA agressive prompt.md  Some insights to ponder.md  feedbacks.md  merged-specs-v2.1-full.md
results/: bilan_validation_20251212_161706.csv  loan_validation_20251212_161706.csv  simulation_20251212_144758.json  simulation_20251212_145021.json  simulation_20251212_145319.json  simulation_20251212_150009.json  simulation_validation_20251212_161706.csv
results/scenarios/: scenario_AGGRESSIVE_20251212_124256.json  scenario_AGGRESSIVE_20251212_133047.json  scenario_AGGRESSIVE_20251212_133231.json  scenario_BALANCED_20251212_124256.json  scenario_BALANCED_20251212_133047.json  scenario_BALANCED_20251212_133232.json  scenario_CONSERVATIVE_20251212_124120.json  scenario_CONSERVATIVE_20251212_124256.json  scenario_CONSERVATIVE_20251212_133047.json  scenario_CONSERVATIVE_20251212_133231.json
src/: __init__.py
src/application/services/: __init__.py  allocator.py  brick_factory.py  evaluator.py  exporter.py  optimizer.py  simulation.py  strategy_finder.py
src/core/: __init__.py  exceptions.py  financial.py  glossary.py  logging.py  scoring.py  scoring_constants.py  settings.py  simulation.py
src/domain/calculator/: financial.py  scoring.py
src/domain/models/: __init__.py  archetype.py  brick.py  strategy.py
src/models/: __init__.py  archetype.py  brick.py  strategy.py
src/services/: __init__.py  allocator.py  brick_factory.py  evaluator.py  exporter.py  optimizer.py  parallel_worker.py  strategy_finder.py
src/ui/: app_controller.py  helpers.py  progress.py  state.py
src/ui/assets/: style.css
src/ui/components/: charts.py  filters.py  progress_display.py  results.py  sensitivity.py  sidebar.py
src/ui/pages/: main.py
src/utils/: debug.py
tests/: __init__.py  conftest.py  test_audit_remediation.py  verification_fixtures.py  verification_scenarios.py
tests/e2e/: test_full_pipeline.py  test_qa_hardening.py
tests/integration/: test_invariants.py  test_pipeline.py
tests/unit/: test_allocator.py  test_brick_factory.py  test_edge_cases.py  test_evaluator.py  test_financial.py  test_glossary_modes.py  test_golden_validation.py  test_models.py  test_optimizer.py  test_parameter_effects.py  test_scoring.py  test_simulation.py  test_strategy_finder.py
tests/verification/: verify_simulation_parity.py
