[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-immo"
version = "27.6.0"
description = "Real Estate Investment Strategy Simulator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "app_immo team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.28.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "numpy-financial>=1.0.0,<2.0.0",
    "plotly>=5.15.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "structlog>=23.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs",
]

[project.scripts]
app-immo = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ========== RUFF CONFIGURATION ==========
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "env",
    "__pycache__",
    "*.egg-info",
    "legacy_*.py",
    "debug_*.py",
]


[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========== MYPY CONFIGURATION ==========
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "env/",
    "tests/",
]

# Stricter settings (P3.2)
disallow_untyped_defs = false  # Enable gradually per-module
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "src.models.*"
disallow_untyped_defs = true  # Models should be fully typed

[[tool.mypy.overrides]]
module = "src.core.*"
disallow_untyped_defs = false  # Enable when ready

# ========== PYTEST CONFIGURATION ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "env/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
